# NER_Clinical_Trial_Eligibility

./: .gitignore
data/processed/: label_list.json  test.jsonl  test_spans.jsonl  train.jsonl  train_spans.jsonl  val.jsonl  val_spans.jsonl
data/processed_baseline/: fold_assignments.json  label_list.json  test.jsonl  test_spans.jsonl  train.jsonl  train_spans.jsonl  val.jsonl  val_spans.jsonl
experiments/: example_superset_seed42.json  experiment.py  experiment_qwen.py  sample_train.py  score_predictions.py
experiments/outputs/: predictions_gemma4-e2b_n100_mfull_seed42.jsonl
experiments/outputs/gemma4-e2b/: predictions_gemma4-e2b_n0_mfull_seed42.jsonl  predictions_gemma4-e2b_n1000_mfull_seed42.jsonl  predictions_gemma4-e2b_n1_mfull_seed42.jsonl  predictions_gemma4-e2b_n250_mfull_seed42.jsonl  predictions_gemma4-e2b_n25_mfull_seed42.jsonl  predictions_gemma4-e2b_n500_mfull_seed42.jsonl  predictions_gemma4-e2b_n5_mfull_seed42.jsonl
experiments/outputs/gemma4-e4b/: predictions_gemma4-e4b_n0_mfull_seed42.jsonl  predictions_gemma4-e4b_n100_mfull_seed42.jsonl  predictions_gemma4-e4b_n1_mfull_seed42.jsonl  predictions_gemma4-e4b_n250_mfull_seed42.jsonl  predictions_gemma4-e4b_n25_mfull_seed42.jsonl  (+2 more)
notebooks/: data_preprocess.ipynb
pipeline/: .gitignore  README.md  pyproject.toml
pipeline/src/chia_pipeline/: align.py  baselines.py  brat.py  build_dataset.py  constants.py  download.py  eda.py  eval_utils.py  evaluate.py  stats.py  tokenizer.py
pipeline/tests/: test_align.py  test_brat.py  test_eval_utils.py  test_evaluate.py
(+7 files in other folders)
